# IllustrationVerse

./: -----.gitmodules----  .gitignore  .gitmodules  CMakeLists.txt  task_run_recoding.md
Anydraw/: CMakeLists.txt  LICENSE_CN  anydraw_plugin.cpp
StableCanvas/: CMakeLists.txt  stablecanvas_plugin.cpp
StableVerse/: CMakeLists.txt
StableVerse/common/: commandstring.cpp  main.cpp  pluginhost.cpp  pluginhost.h  utility.cpp
StableVerse/gui/: donatedialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
StableVerse/include/common/: StableVersePluginApi.h  commandstring.h  inferPlugin.h  utility.h
StableVerse_Activator/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MyDialog.h  activator_plugin.cpp
StableVerse_Enhance/: CMakeLists.txt  CommercialFeature.h  StableVerse_README_Helper.MD  comercial_plugin.h  enhance_plugin.cpp  license.h
StableVerse_Enhance/activation/: LicenseManager.cpp  MacAddressHelper.cpp  MacAddressHelper.h  activatedialog.cpp  activatedialog.h  activatedialog.ui  lisencechecker.h  utilitiesenhence.cpp  utilitiesenhence.h
StableVerse_Enhance/resource/: resource.qrc
StableVerse_Enhance/translations/: zh_tw.ts
activator/: CMakeLists.txt  LicenseByUID.h  LicenseManager.cpp  LicenseManager.h  MacAddressHelper.cpp  MainWindow.ui  activator_plugin.cpp
canvas/: CMakeLists.txt  canvas_plugin.cpp  main.cpp
cmake_Kelvin/: ProjectSetting.cmake
enhance/: CMakeLists.txt  LICENSE  LICENSE_CN  enhance_plugin.cpp  recordlist.md
enhance/activation/: LicenseManager.h  lisencechecker.cpp
enhance/translations/: en_us.ts  zh_cn.ts
imgedit/: CMakeLists.txt  LICENSE  anydraw_plugin.cpp
